--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
     "customize-cra": "^1.0.0",
     "eslint": "^9.12.0",
     "react": "^18.3.1",
@@ -33,9 +34,7 @@
     "prepare": "husky"
   },
   "eslintConfig": {
-    "extends": [
-      
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
