--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.1.0",
+    "@mantine/core": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,6 @@
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
     "customize-cra": "^1.0.0",
     "eslint": "^9.12.0",
@@ -20,7 +20,6 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.13",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
