--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@mantine/hooks": "^7.12.2",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.13",
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "prepare": "husky"
@@ -53,6 +53,9 @@
     "@eslint/compat": "^1.2.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@testing-library/dom": "^10.4.0",
+    "@types/lodash": "^4.17.10",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -66,11 +69,18 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.10.0",
     "husky": "^9.1.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^15.2.10",
+    "lodash": "^4.17.21",
     "prettier": "^3.3.3",
-    "typescript-eslint": "^8.8.0"
+    "react-hook-form": "^7.53.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.8.0",
+    "yup": "^1.4.0"
   },
   "husky": {
     "hooks": {
