--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@assets/*": ["assets/*"]
+      "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"]
     },
-    "target": "es5",
+    "target": "ES6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -27,4 +28,9 @@
   "include": [
     "src",
   ],
+  "types": [
+    "jest",
+    "@testing-library/jest-dom"
+  ],
+  "skipLibCheck": true
 }
