fix: functions for queries moved to a separate folder, validation fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
     "baseUrl": "src",
     "paths": {
       "@assets/*": ["assets/*"],
-      "@components/*": ["components/*"]
+      "@components/*": ["components/*"],
+      "@constants/*": ["constants/*"],
+      "@api/": ["api/*"],
     },
-    "target": "ES6",
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -32,5 +34,4 @@
     "jest",
     "@testing-library/jest-dom"
   ],
-  "skipLibCheck": true
 }
