--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
       "@constants/*": ["constants/*"],
-      "@api/": ["api/*"],
+      "@api": ["api"],
+      "@types": ["types"],
     },
     "target": "es5",
     "lib": [
